--- a/index.html
+++ b/index.html
@@ -36,6 +36,47 @@
       <a href="assets/Pavan_Tummala_Resume.pdf" target="_blank" class="cta-button">📄 View My Resume</a>
     </section>
 
+     <section id="skills" class="max-w-4xl mx-auto py-10 px-4">
+      <h3 class="text-3xl font-bold text-teal-400 mb-4">Skills</h3>
+      <ul class="list-disc list-inside text-gray-300">
+        <li>Python, SQL, R</li>
+        <li>Power BI, Tableau, Excel</li>
+        <li>Data Cleaning & Visualization</li>
+        <li>Machine Learning (scikit-learn, pandas)</li>
+        <li>AWS, GCP, Azure</li>
+      </ul>
+    </section>
+
+    <section id="education" class="max-w-4xl mx-auto py-10 px-4">
+      <h3 class="text-3xl font-bold text-teal-400 mb-4">Education</h3>
+      <div class="text-gray-300">
+        <p class="font-semibold">Master of Science in Data Science</p>
+        <p>University of XYZ – 2020–2022</p>
+        <br />
+        <p class="font-semibold">Bachelor of Technology in Computer Science</p>
+        <p>ABC Institute of Technology – 2016–2020</p>
+      </div>
+    </section>
+
+    <section id="projects" class="max-w-4xl mx-auto py-10 px-4">
+      <h3 class="text-3xl font-bold text-teal-400 mb-4">Projects</h3>
+      <ul class="space-y-6 text-gray-300">
+        <li>
+          <p class="font-semibold">🏭 ERP System</p>
+          <p>Designed and implemented a normalized ERP database using Oracle SQL. Modeled inventory, procurement, billing, and order tracking. Built APEX web forms, reducing manual data entry by 40%.</p>
+        </li>
+        <li>
+          <p class="font-semibold">📊 Sales Dashboard</p>
+          <p>Created an interactive Power BI dashboard to analyze regional sales data, helping leadership identify underperforming markets.</p>
+        </li>
+        <li>
+          <p class="font-semibold">🧠 Churn Prediction Model</p>
+          <p>Built a logistic regression model in Python to predict customer churn with 85% accuracy using pandas and scikit-learn.</p>
+        </li>
+      </ul>
+    </section>
+
+
     <footer class="text-center py-6 text-gray-500">
       &copy; 2025 Pavan Tummala. All rights reserved.
     </footer>
