--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                 </p>
             </div>
             <div class="about-image">
-                <div class="profile-placeholder">PT</div>
+                <img src="assets/profile.jpg" alt="Pavan Tummala" class="profile-placeholder" style="border-radius: 50%; object-fit: cover;">
             </div>
         </div>
     </section>
