--- a/index.html
+++ b/index.html
@@ -721,8 +721,7 @@
             <h1 class="hero-name">Pavan Tummala</h1>
             <h2 class="hero-title">Data Analyst 📊</h2>
             <p class="hero-description">
-                Results-driven Data Analyst with 3+ years of experience transforming complex data into actionable business insights. 
-                Specialized in Python, SQL, Power BI, and cloud platforms like AWS, GCP, and Azure.
+                I spend my days turning confusing spreadsheets into "aha!" moments for businesses who thought their data was just expensive digital clutter. After 3+ years of speaking fluent Python, SQL, and Power BI, I've mastered the art of making executives actually understand what their numbers mean while wrestling with AWS, GCP, and Azure.
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn-primary">Hire Me</a>
