--- a/index.html
+++ b/index.html
@@ -796,7 +796,9 @@
         <div class="education-grid">
             <div class="education-card">
                 <div class="education-header">
-                    <div class="education-logo">🎓</div>
+                    <div class="education-logo">
+                        <img src="assets/suny_buffalo_logo.png" alt="SUNY Buffalo Logo" />
+                    </div>
                     <div class="education-info">
                         <h4>State University of New York, Buffalo</h4>
                         <p>Master of Professional Studies, Data Science</p>
@@ -806,7 +808,9 @@
             </div>
             <div class="education-card">
                 <div class="education-header">
-                    <div class="education-logo">🎓</div>
+                    <div class="education-logo">
+                        <img src="assets/svu_logo.png" alt="Sri Venkateswara University Logo" />
+                    </div>
                     <div class="education-info">
                         <h4>Sri Venkateswara University, Tirupati</h4>
                         <p>Bachelor of Technology, Electronics & Communications</p>
