--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="assets/Pavan_Tummala_Resume.pdf" class="cta-nav" target="_blank">Resume</a>
+            <a href="assets/pavan_tummala.pdf" class="cta-nav" target="_blank">Resume</a>
             <div class="mobile-menu">
                 <span></span>
                 <span></span>
@@ -917,7 +917,7 @@
                 </div>
             </div>
             <div class="hero-buttons">
-                <a href="assets/Pavan_Tummala_Resume.pdf" target="_blank" class="btn-primary">Download Resume</a>
+                <a href="assets/pavan_tummala.pdf" target="_blank" class="btn-primary">Download Resume</a>
                 <a href="mailto:pavank@jobhuntmails.com" class="btn-secondary">Send Email</a>
             </div>
         </div>
